--- a/notebook_1.Rmd
+++ b/notebook_1.Rmd
@@ -1,8 +1,15 @@
 ---
 title: "R Notebook"
-output: html_notebook
-?deve---
+output:
+  revealjs::revealjs_presentation:
+    theme: sky
+    highlight: pygments
+    transition: fade
+    center: true
+    incremental: true
+---
 
+# Slide 1
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
 
 Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
@@ -11,6 +18,7 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 plot(cars)
 ```
 
+# Slide 2
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
 
 When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file).
